--- a/1796.html
+++ b/1796.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>钩子号水兵刀 - 详情</title>
+    <title>1796轻骑兵军刀 - 详情</title>
     <style>
         body {
             font-family: Arial, sans-serif;
