--- a/1796.html
+++ b/1796.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+index<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -78,7 +78,7 @@
             <!-- 继续添加图片 -->
         </div>
 
-        <a href="StrikeBlade.html" class="back-link">返回产品展示页面</a>
+        <a href="index.heml" class="back-link">返回产品展示页面</a>
     </div>
 </body>
 </html>
