--- a/1796.html
+++ b/1796.html
@@ -78,7 +78,7 @@ index<!DOCTYPE html>
             <!-- 继续添加图片 -->
         </div>
 
-        <a href="index.heml" class="back-link">返回产品展示页面</a>
+        <a href="index.html" class="back-link">返回产品展示页面</a>
     </div>
 </body>
 </html>
