--- a/钩子号.html
+++ b/钩子号.html
@@ -78,7 +78,7 @@
             <!-- 继续添加图片 -->
         </div>
 
-        <a href="index.com" class="back-link">返回产品展示页面</a>
+        <a href="index.html" class="back-link">返回产品展示页面</a>
     </div>
 </body>
 </html>
