--- a/侧剑.html
+++ b/侧剑.html
@@ -81,7 +81,7 @@
             <!-- 继续添加图片 -->
         </div>
 
-        <a href="StrikeBlade.html" class="back-link">返回产品展示页面</a>
+        <a href="index.html" class="back-link">返回产品展示页面</a>
     </div>
 </body>
 </html>
