--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@
             </a>
         </div>
 
+        <!-- DIY产品 -->
+        <div class="product">
+            <a href="装具团购以及DIY展示.html" class="product-link">
+                <div class="product-info">
+                    <h2>源自于小林总设计师的匠心设计</h2>
+                    <p>经典中式设计，独具特色的魅力！</p>
+                    <div class="price">¥300.00</div>
+                </div>
+                <img src="./装具素材/装具本体.png" alt="装具团和DIY展示" class="product-preview" height="150" width="150">
+            </a>
+        </div>
+
         <!--测试中的产品-->
         <div class="product">
             <a href="侧剑.html" class="product-link">
