--- a/ArmingSword.html
+++ b/ArmingSword.html
@@ -61,7 +61,7 @@
     <div class="container">
         <h1 class="product-title">客户定制武装剑</h1>
         <p class="product-description">这款复原武装剑使用传统工艺打造，忠实还原了中世纪武器的威严和细节。它由高品质钢材制成，手工锻造，旨在让历史爱好者和武器收藏家体验到冷兵器的真实魅力。</p>
-        <p class="product-description">剑身长90厘米，重约1.5公斤，设计符合人体工程学，适合展示或收藏。每一把剑都是手工制作，独一无二。</p>
+        <p class="product-description">剑身长90厘米，重约950g，设计符合人体工程学，适合展示或收藏。每一把剑都是手工制作，独一无二。</p>
         <p class="product-description price">价格：¥1300.00</p>
 
         <!-- 图片画廊 -->
