修复了雁龄刀页面的价格显示问题

--- a/雁龄刀.html
+++ b/雁龄刀.html
@@ -68,7 +68,7 @@
         <h1 class="product-title">雁龄刀 design from 小林</h1>
         <p class="product-description">本款雁龄刀为参考古董以及群友讨论最终定下的款式，目前正在进行材料设计中，仅展示渲染图与模型。</p>
         <p class="product-description">具体参数正在进行修改中，预计控制在90cm，750g附近。</p>
-        <p class="product-description price">价格：¥950.00</p>
+        <p class="product-description price">价格：¥1?00.00</p>
 
         <!-- 图片画廊 -->
         <div class="image-gallery">
