--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <a href="雁翎刀.html" class="product-link">
                 <div class="product-info">
                     <h2>雁翎刀</h2>
-                    <p>明风方装雁龄刀，尽显大明风华</p>
+                    <p>明风方装雁翎刀，尽显大明风华</p>
                     <p>全长89cm，重约770g（目前估算，不为最终成品数据），设计来源于群内指定设计师小林，以及友意见的巨献。</p>
                     <div class="price">¥1？00</div>
                 </div>
