--- a/钩子号.html
+++ b/钩子号.html
@@ -69,12 +69,10 @@
             <a href="./钩子号素材/钩子.png" target="_blank">
                 <img src="./钩子号素材/钩子.png" alt="钩子号1">
             </a>
-            <a href="https://via.placeholder.com/200" target="_blank">
+            <a href="./钩子号素材/钩子.png" target="_blank">
                 <img src="https://via.placeholder.com/200" alt="复原长剑图片3">
             </a>
-            <a href="https://via.placeholder.com/200" target="_blank">
-                <img src="https://via.placeholder.com/200" alt="复原长剑图片4">
-            </a>
+        
             <!-- 继续添加图片 -->
         </div>
 
