--- a/index.html
+++ b/index.html
@@ -1,210 +1,279 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strike Blade 产品展示</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #ff7e5f, #feb47b);
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-        .container {
-            width: 90%;
-            max-width: 800px;
-            margin: 20px auto;
-            text-align: center;
-        }
-        .intro, .product, .team {
-            background-color: #fff;
-            padding: 20px;
-            margin: 20px auto;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .intro:hover, .product:hover, .team:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-        .intro-title, .page-title {
-            font-size: 32px;
-            color: #333;
-            font-weight: bold;
-        }
-        .intro-description {
-            font-size: 18px;
-            color: #555;
-            line-height: 1.6;
-            margin-top: 10px;
-        }
-        .product-info h2 {
-            color: #4b0082;
-            font-weight: bold;
-        }
-        .product-info p {
-            font-size: 16px;
-            color: #333;
-        }
-        .price {
-            font-size: 20px;
-            color: #e67e22;
-            font-weight: bold;
-        }
-        .product-preview {
-            margin-top: 15px;
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-        .product-link {
-            text-decoration: none;
-            color: inherit;
-        }
-        .image-gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 20px;
-            justify-content: center;
-        }
-        .image-gallery a {
-            display: block;
-            max-width: 200px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .image-gallery a:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-        .image-gallery img {
-            width: 100%;
-            border-radius: 8px;
-        }
-        .team h2 {
-            font-size: 28px;
-            color: #4b0082;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Strike Blade 产品展示</title>
+  <!-- 引入古典字体 -->
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Libre+Baskerville&display=swap" rel="stylesheet">
+  <style>
+    /* 重置样式 */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    /* 使用带纹理的背景和复古色调 */
+    body {
+      font-family: 'Libre Baskerville', serif;
+      background: url('https://www.transparenttextures.com/patterns/old-mathematics.png');
+      background-color: #f4f1e9;
+      color: #2c2c2c;
+      line-height: 1.6;
+    }
+    /* 容器 */
+    .container {
+      width: 90%;
+      max-width: 900px;
+      margin: 30px auto;
+      text-align: center;
+    }
+    /* 标题字体 */
+    h1, h2 {
+      font-family: 'Cinzel', serif;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      margin-bottom: 10px;
+    }
+    /* 模块公共样式 */
+    .intro, .product, .team {
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 25px;
+      margin: 20px auto;
+      border: 2px solid #a67c52;
+      border-radius: 10px;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .intro:hover, .product:hover, .team:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    }
+    /* 首页与页面标题 */
+    .intro-title, .page-title {
+      font-size: 36px;
+      color: #3e2723;
+    }
+    .intro-description {
+      font-size: 18px;
+      color: #5d4037;
+      margin-top: 10px;
+      text-align: justify;
+    }
+    /* 产品信息 */
+    .product-info h2 {
+      color: #4e342e;
+      font-size: 28px;
+    }
+    .product-info p {
+      font-size: 16px;
+      color: #4e342e;
+      margin: 10px 0;
+    }
+    .price {
+      font-size: 22px;
+      color: #bf360c;
+      font-weight: bold;
+      margin-top: 5px;
+    }
+    .product-preview {
+      margin-top: 15px;
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      border: 1px solid #a67c52;
+    }
+    .product-link {
+      text-decoration: none;
+      color: inherit;
+      display: block;
+    }
+    /* 图像展示 */
+    .image-gallery {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 20px;
+      justify-content: center;
+    }
+    .image-gallery a {
+      display: block;
+      max-width: 220px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .image-gallery a:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+    }
+    .image-gallery img {
+      width: 100%;
+      border-radius: 8px;
+    }
+    .team h2 {
+      font-size: 30px;
+      color: #4e342e;
+      margin-top: 15px;
+    }
+    .team ul {
+      list-style-type: none;
+      margin-top: 10px;
+    }
+    .team li a {
+      color: #bf360c;
+      text-decoration: none;
+    }
+    /* 增加一个古风头部区域 */
+    .header {
+      text-align: center;
+      padding: 30px 0;
+      background: #d7ccc8;
+      border-bottom: 4px solid #a67c52;
+    }
+    .header h1 {
+      font-size: 48px;
+      margin-bottom: 10px;
+      color: #3e2723;
+    }
+    .header p {
+      font-size: 20px;
+      color: #5d4037;
+    }
+  </style>
 </head>
 <body>
-    <!-- 官网介绍部分 -->
-    <div class="intro">
-        <h1 class="intro-title">关于 Strike Blade</h1>
-        <p class="intro-description">Strike Blade 专注于历史复原冷兵器的制作，致力于还原中世纪经典武器的威严与美学。我们的每件作品均采用传统工艺手工打造，旨在为历史爱好者和武器收藏家带来真实的冷兵器体验。</p>
+  <!-- 古风头部 -->
+  <div class="header">
+    <h1>Strike Blade</h1>
+    <p>复原中世纪冷兵器的匠心之作</p>
+  </div>
+
+  <!-- 官网介绍部分 -->
+  <div class="intro container">
+    <h1 class="intro-title">关于 Strike Blade</h1>
+    <p class="intro-description">
+      Strike Blade 专注于历史复原冷兵器的制作，致力于还原中世纪经典武器的威严与美学。我们的每件作品均采用传统工艺手工打造，旨在为历史爱好者和武器收藏家带来真实的冷兵器体验。
+    </p>
+  </div>
+
+  <!-- 产品展示部分 -->
+  <div class="container">
+    <h1 class="page-title">产品展示</h1>
+
+    <!-- 第一个产品 -->
+    <div class="product">
+      <a href="1796.html" class="product-link">
+        <div class="product-info">
+          <h2>1796轻骑兵军刀</h2>
+          <p>马刀款式中的经典，骠骑兵们的首选！</p>
+          <div class="price">¥1500.00</div>
+        </div>
+        <img src="./1796素材/1796-1.png" alt="1796预览图" class="product-preview">
+      </a>
     </div>
 
-    <!-- 产品展示部分 -->
-    <div class="container">
-        <h1 class="page-title">Strike Blade 产品展示</h1>
-
-        <!-- 第一个产品 -->
-        <div class="product">
-            <a href="1796.html" class="product-link">
-                <div class="product-info">
-                    <h2>1796轻骑兵军刀</h2>
-                    <p>马刀款式中的经典，骠骑兵们的首选！</p>
-                    <div class="price">¥1500.00</div>
-                </div>
-                <img src="./1796素材/1796-1.png" alt="1796预览图" class="product-preview">
-            </a>
+    <!-- DIY产品 -->
+    <div class="product">
+      <a href="装具团购以及DIY展示.html" class="product-link">
+        <div class="product-info">
+          <h2>源自于小林总设计师的匠心设计</h2>
+          <p>经典中式设计，独具特色的魅力！</p>
+          <div class="price">¥300.00</div>
         </div>
-
-        <!-- DIY产品 -->
-        <div class="product">
-            <a href="装具团购以及DIY展示.html" class="product-link">
-                <div class="product-info">
-                    <h2>源自于小林总设计师的匠心设计</h2>
-                    <p>经典中式设计，独具特色的魅力！</p>
-                    <div class="price">¥300.00</div>
-                </div>
-                <img src="./装具素材/装具本体.png" alt="装具团和DIY展示" class="product-preview">
-            </a>
-        </div>
-
-        <!-- 测试中的产品 -->
-        <div class="product">
-            <a href="侧剑.html" class="product-link">
-                <div class="product-info">
-                    <h2>南德意志侧剑</h2>
-                    <p>德国风味，敬请期待！</p>
-                    <div class="price">¥未定</div>
-                </div>
-                <img src="./侧剑/侧剑.png" alt="sidesword预览图" class="product-preview">
-            </a>
-        </div>
-
-        <!-- 第二个产品 -->
-        <div class="product">
-            <a href="ArmingSword.html" class="product-link">
-                <div class="product-info">
-                    <h2>客户定制武装剑</h2>
-                    <p>这款复原武装剑使用传统工艺打造，重现中世纪经典武器的威严和美学。</p>
-                    <div class="price">¥1300.00</div>
-                </div>
-                <img src="./武装剑素材/ArmingSword1.png" alt="复原武装剑预览图" class="product-preview">
-            </a>
-        </div>
-
-        <!-- 第三个产品 -->
-        <div class="product">
-            <a href="钩子号.html" class="product-link">
-                <div class="product-info">
-                    <h2>钩子号水兵刀</h2>
-                    <p>这款水兵刀剑采用S7先进钢材制造，完美体现18、19世纪大英航海风骨。旨在让历史爱好者和武器收藏家体验到钩子号船长和他忠实船员的真实魅力。</p>
-                    <p>全长70cm，重约750g，设计灵感来源于尊贵的钩子船长，向他致敬。</p>
-                    <div class="price">¥950.00</div>
-                </div>
-                <div class="image-gallery">
-                    <a href="./钩子号素材/钩子.png" target="_blank">
-                        <img src="./钩子号素材/钩子.png" alt="钩子号1">
-                    </a>
-                </div>
-            </a>
-        </div>
-
-        <!-- 第四个产品 -->
-        <div class="product">
-            <a href="雁翎刀.html" class="product-link">
-                <div class="product-info">
-                    <h2>雁翎刀</h2>
-                    <p>明风方装雁翎刀，尽显大明风华</p>
-                    <p>全长89cm，重约770g（目前估算，不为最终成品数据），设计来源于群内指定设计师小林，以及友意见的巨献。</p>
-                    <div class="price">¥1？00</div>
-                </div>
-                <div class="image-gallery">
-                    <a href="./雁龄刀素材/雁龄刀0.jpg" target="_blank"> 
-                        <img src="./雁龄刀素材/雁龄刀0.jpg" alt="雁翎刀">
-                    </a>
-                </div>
-            </a>
-        </div>
+        <img src="./装具素材/装具本体.png" alt="装具团和DIY展示" class="product-preview">
+      </a>
     </div>
 
-    <!-- 团队介绍和联系方式 -->
-    <div class="container team">
-        <h1 class="page-title">我们的团队</h1>
-        <div>
-            <h2>关于我们的工匠</h2>
-            <p class="intro-description">Strike Blade 的工匠团队由一群对历史和武器制造充满热情的专业匠人组成。每位工匠都精通传统锻造技艺，确保每件作品的精细度和真实性。</p>
-            <h2>关于创始人</h2>
-            <p class="intro-description">我们的创始人兼老板是一位历史爱好者，致力于为历史复原冷兵器爱好者提供高品质的产品。他亲自监督每件武器的制作过程，确保每一件都是艺术品。</p>
-            <h2>联系方式</h2>
-            <p class="intro-description">如果您有任何问题或建议，欢迎通过以下方式联系我们：</p>
-            <ul>
-                <li>邮箱: <a href="mailto:strikeblade@163.com">strikeblade@163.com</a></li>
-                <li>微信：Deanleozaren</li>
-                <li>联系电话：+86 13672137739</li>
-            </ul>
+    <!-- 测试中的产品 -->
+    <div class="product">
+      <a href="侧剑.html" class="product-link">
+        <div class="product-info">
+          <h2>南德意志侧剑</h2>
+          <p>德国风味，敬请期待！</p>
+          <div class="price">¥未定</div>
         </div>
+        <img src="./侧剑/侧剑.png" alt="侧剑预览图" class="product-preview">
+      </a>
     </div>
+
+    <!-- 客户定制武装剑 -->
+    <div class="product">
+      <a href="ArmingSword.html" class="product-link">
+        <div class="product-info">
+          <h2>客户定制武装剑</h2>
+          <p>这款复原武装剑使用传统工艺打造，重现中世纪经典武器的威严和美学。</p>
+          <div class="price">¥1300.00</div>
+        </div>
+        <img src="./武装剑素材/ArmingSword1.png" alt="复原武装剑预览图" class="product-preview">
+      </a>
+    </div>
+
+    <!-- 钩子号水兵刀 -->
+    <div class="product">
+      <a href="钩子号.html" class="product-link">
+        <div class="product-info">
+          <h2>钩子号水兵刀</h2>
+          <p>
+            这款水兵刀剑采用S7先进钢材制造，完美体现18、19世纪大英航海风骨。旨在让历史爱好者和武器收藏家体验到钩子号船长和他忠实船员的真实魅力。
+          </p>
+          <p>
+            全长70cm，重约750g，设计灵感来源于尊贵的钩子船长，向他致敬。
+          </p>
+          <div class="price">¥950.00</div>
+        </div>
+        <div class="image-gallery">
+          <a href="./钩子号素材/钩子.png" target="_blank">
+            <img src="./钩子号素材/钩子.png" alt="钩子号1">
+          </a>
+        </div>
+      </a>
+    </div>
+
+    <!-- 雁翎刀 -->
+    <div class="product">
+      <a href="雁翎刀.html" class="product-link">
+        <div class="product-info">
+          <h2>雁翎刀</h2>
+          <p>明风方装雁翎刀，尽显大明风华</p>
+          <p>全长89cm，重约770g（目前估算，不为最终成品数据），设计来源于群内指定设计师小林，以及友意见的巨献。</p>
+          <div class="price">¥1？00</div>
+        </div>
+        <div class="image-gallery">
+          <a href="./雁龄刀素材/雁龄刀0.jpg" target="_blank">
+            <img src="./雁龄刀素材/雁龄刀0.jpg" alt="雁翎刀">
+          </a>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <!-- 团队介绍和联系方式 -->
+  <div class="container team">
+    <h1 class="page-title">我们的团队</h1>
+    <div>
+      <h2>关于我们的工匠</h2>
+      <p class="intro-description">
+        Strike Blade 的工匠团队由一群对历史和武器制造充满热情的专业匠人组成。每位工匠都精通传统锻造技艺，确保每件作品的精细度和真实性。
+      </p>
+      <h2>关于创始人</h2>
+      <p class="intro-description">
+        我们的创始人兼老板是一位历史爱好者，致力于为历史复原冷兵器爱好者提供高品质的产品。他亲自监督每件武器的制作过程，确保每一件都是艺术品。
+      </p>
+      <h2>联系方式</h2>
+      <p class="intro-description">
+        如果您有任何问题或建议，欢迎通过以下方式联系我们：
+      </p>
+      <ul>
+        <li>邮箱: <a href="mailto:strikeblade@163.com">strikeblade@163.com</a></li>
+        <li>微信：Deanleozaren</li>
+        <li>联系电话：+86 13672137739</li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
+
 
 
 
