优化布局以及更新

--- a/装具团购以及DIY展示.html
+++ b/装具团购以及DIY展示.html
@@ -1,84 +1,161 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>装具团和DIY展示 - 详情</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .product-title {
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-        .product-description {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #555;
-            margin-bottom: 20px;
-        }
-        .price {
-            font-weight: bold;
-            color: #e67e22;
-        }
-        .image-gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        .image-gallery a {
-            display: block;
-            max-width: 200px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .image-gallery img {
-            width: 100%;
-            border-radius: 8px;
-        }
-        .back-link {
-            display: inline-block;
-            margin-top: 20px;
-            color: #3498db;
-            text-decoration: none;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>装具团和DIY展示 - 详情</title>
+  <!-- 引入古典字体 -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Libre+Baskerville&display=swap"
+    rel="stylesheet"
+  />
+  <style>
+    /* 重置样式 */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    /* 页面背景与基础样式 */
+    body {
+      font-family: 'Libre Baskerville', serif;
+      background: url('https://www.transparenttextures.com/patterns/old-mathematics.png');
+      background-color: #f4f1e9;
+      color: #2c2c2c;
+      line-height: 1.6;
+      padding: 20px;
+    }
+    /* 页面头部 */
+    .header {
+      text-align: center;
+      padding: 30px 0;
+      background: #d7ccc8;
+      border-bottom: 4px solid #a67c52;
+      margin-bottom: 20px;
+    }
+    .header h1 {
+      font-family: 'Cinzel', serif;
+      font-size: 48px;
+      color: #3e2723;
+      margin-bottom: 10px;
+    }
+    .header p {
+      font-size: 20px;
+      color: #5d4037;
+    }
+    /* 容器样式 */
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 25px;
+      border: 2px solid #a67c52;
+      border-radius: 10px;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    }
+    .product-title {
+      font-family: 'Cinzel', serif;
+      font-size: 36px;
+      margin-bottom: 20px;
+      color: #3e2723;
+      text-align: center;
+      text-transform: uppercase;
+    }
+    .product-description {
+      font-size: 18px;
+      line-height: 1.8;
+      color: #5d4037;
+      margin-bottom: 20px;
+      text-align: justify;
+    }
+    .price {
+      font-weight: bold;
+      color: #bf360c;
+      font-size: 20px;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    /* 图片画廊 */
+    .image-gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 15px;
+      margin-top: 20px;
+      justify-items: center;
+    }
+    /* 统一图片比例：使用 aspect-ratio (现代浏览器支持) */
+    .image-gallery a {
+      width: 100%;
+      aspect-ratio: 1 / 1; /* 正方形，可根据需求改成 4/3、16/9 等 */
+      border-radius: 8px;
+      overflow: hidden;
+      border: 1px solid #a67c52;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+      display: block;
+      position: relative;
+    }
+    .image-gallery a:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    .image-gallery img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* 裁剪图片以适应容器 */
+      display: block;
+    }
+    /* 返回链接按钮风格 */
+    .back-link {
+      display: inline-block;
+      margin-top: 25px;
+      color: #bf360c;
+      text-decoration: none;
+      font-size: 18px;
+      border: 1px solid #bf360c;
+      padding: 8px 16px;
+      border-radius: 4px;
+      transition: background-color 0.3s, color 0.3s;
+    }
+    .back-link:hover {
+      background-color: #bf360c;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="product-title">中式双手剑剑装</h1>
-        <p class="product-description">为diy玩家和其他装具需求者而开发。由玩家的奇思妙想来赋予同一套装具无限的可能！</p>
-        <p class="product-description">全重约700g，厚实可靠的装具，做的放心，用的安心～</p>
-        <p class="product-description price">价格：¥300</p>
+  <!-- 页面头部 -->
+  <div class="header">
+    <h1>Strike Blade</h1>
+    <p>复原中世纪冷兵器的匠心之作</p>
+  </div>
 
-        <!-- 图片画廊 -->
-        <div class="image-gallery">
-            <a href="./装具素材/装具本体.png" target="_blank">
-                <img src="./装具素材/装具本体.png" alt="hilt">
-            </a>
-            <a href="./装具素材/DIY1.png" target="_blank">
-                <img src="./装具素材/DIY1.png" alt="DIY1">
-            </a>
-            <a href="./装具素材/DIY2.png" target="_blank">
-                <img src="./装具素材/DIY2.png" alt="DIY2">
-            </a>
-            <!-- 继续添加图片 -->
-        </div>
+  <!-- 内容容器 -->
+  <div class="container">
+    <h1 class="product-title">中式双手剑剑装</h1>
+    <p class="product-description">
+      为 DIY 玩家和其他装具需求者而开发。通过玩家的奇思妙想，同一套装具可以拥有无限的可能性！
+    </p>
+    <p class="product-description">
+      全重约 700g，厚实可靠的装具，让你做得放心，用得安心。
+    </p>
+    <p class="price">价格：¥300</p>
 
-        <a href="index.html" class="back-link">返回产品展示页面</a>
+    <!-- 图片画廊：使用 Grid 布局统一尺寸 -->
+    <div class="image-gallery">
+      <a href="./装具素材/装具本体.png" target="_blank">
+        <img src="./装具素材/装具本体.png" alt="装具本体" />
+      </a>
+      <a href="./装具素材/DIY1.png" target="_blank">
+        <img src="./装具素材/DIY1.png" alt="DIY1" />
+      </a>
+      <a href="./装具素材/DIY2.png" target="_blank">
+        <img src="./装具素材/DIY2.png" alt="DIY2" />
+      </a>
+      <!-- 如果有更多图片，可以继续添加 -->
     </div>
+
+    <a href="index.html" class="back-link">返回产品展示页面</a>
+  </div>
 </body>
 </html>
