--- a/ArmingSword.html
+++ b/ArmingSword.html
@@ -1,83 +1,151 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>复原长剑 - 详情</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .product-title {
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-        .product-description {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #555;
-            margin-bottom: 20px;
-        }
-        .price {
-            font-weight: bold;
-            color: #e67e22;
-        }
-        .image-gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        .image-gallery a {
-            display: block;
-            max-width: 200px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .image-gallery img {
-            width: 100%;
-            border-radius: 8px;
-        }
-        .back-link {
-            display: inline-block;
-            margin-top: 20px;
-            color: #3498db;
-            text-decoration: none;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>定制武装剑 - 详情</title>
+  <!-- 引入古典字体 -->
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Libre+Baskerville&display=swap" rel="stylesheet">
+  <style>
+    /* 重置样式 */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    /* 页面背景与基本字体 */
+    body {
+      font-family: 'Libre Baskerville', serif;
+      background: url('https://www.transparenttextures.com/patterns/old-mathematics.png');
+      background-color: #f4f1e9;
+      color: #2c2c2c;
+      line-height: 1.6;
+      padding: 20px;
+    }
+    /* 页面头部 */
+    .header {
+      text-align: center;
+      padding: 30px 0;
+      background: #d7ccc8;
+      border-bottom: 4px solid #a67c52;
+      margin-bottom: 20px;
+    }
+    .header h1 {
+      font-family: 'Cinzel', serif;
+      font-size: 48px;
+      margin-bottom: 10px;
+      color: #3e2723;
+    }
+    .header p {
+      font-size: 20px;
+      color: #5d4037;
+    }
+    /* 详情容器 */
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 25px;
+      border: 2px solid #a67c52;
+      border-radius: 10px;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    }
+    .product-title {
+      font-family: 'Cinzel', serif;
+      font-size: 36px;
+      margin-bottom: 20px;
+      color: #3e2723;
+      text-align: center;
+      text-transform: uppercase;
+    }
+    .product-description {
+      font-size: 18px;
+      line-height: 1.8;
+      color: #5d4037;
+      margin-bottom: 20px;
+      text-align: justify;
+    }
+    .price {
+      font-weight: bold;
+      color: #bf360c;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    /* 图片画廊 */
+    .image-gallery {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 20px;
+      justify-content: center;
+    }
+    .image-gallery a {
+      display: block;
+      max-width: 220px;
+      border-radius: 8px;
+      overflow: hidden;
+      border: 1px solid #a67c52;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .image-gallery a:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    .image-gallery img {
+      width: 100%;
+      display: block;
+    }
+    /* 返回链接 */
+    .back-link {
+      display: inline-block;
+      margin-top: 25px;
+      color: #bf360c;
+      text-decoration: none;
+      font-size: 18px;
+      border: 1px solid #bf360c;
+      padding: 8px 16px;
+      border-radius: 4px;
+      transition: background-color 0.3s, color 0.3s;
+    }
+    .back-link:hover {
+      background-color: #bf360c;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="product-title">客户定制武装剑</h1>
-        <p class="product-description">这款复原武装剑使用传统工艺打造，忠实还原了中世纪武器的威严和细节。它由高品质钢材制成，手工锻造，旨在让历史爱好者和武器收藏家体验到冷兵器的真实魅力。</p>
-        <p class="product-description">剑身长90厘米，重约950g，设计符合人体工程学，适合展示或收藏。每一把剑都是手工制作，独一无二。</p>
-        <p class="product-description price">价格：¥1300.00</p>
+  <!-- 页面头部 -->
+  <div class="header">
+    <h1>Strike Blade</h1>
+    <p>复原中世纪冷兵器的匠心之作</p>
+  </div>
 
-        <!-- 图片画廊 -->
-        <div class="image-gallery">
-            <a href="./武装剑素材/ArmingSword1.png" target="_blank">
-                <img src="./武装剑素材/ArmingSword1.png" alt="复原长剑图片1">
-            </a>
-            <a href="./武装剑素材/armingswordHilt.png" target="_blank">
-                <img src="./武装剑素材/armingswordHilt.png" alt="复原长剑图片2">
-            </a>
-            <!-- 继续添加图片 -->
-        </div>
+  <div class="container">
+    <h1 class="product-title">客户定制武装剑</h1>
+    <p class="product-description">
+      这款复原武装剑使用传统工艺打造，忠实还原了中世纪武器的威严和细节。它由5160钢材制成，手工锻造，旨在让历史爱好者和武器收藏家体验到冷兵器的真实魅力。
+    </p>
+    <p class="product-description">
+      剑身长90厘米，重约950g，设计符合人体工程学，既适合展示也适合收藏。每一把剑都是独一无二的手工艺术品。
+    </p>
+    <p class="price">价格：¥1300.00</p>
 
-        <a href="index.html" class="back-link">返回产品展示页面</a>
+    <!-- 图片画廊 -->
+    <div class="image-gallery">
+      <a href="./武装剑素材/ArmingSword1.png" target="_blank">
+        <img src="./武装剑素材/ArmingSword1.png" alt="复原长剑图片1">
+      </a>
+      <a href="./武装剑素材/armingswordHilt.png" target="_blank">
+        <img src="./武装剑素材/armingswordHilt.png" alt="复原长剑图片2">
+      </a>
+      <!-- 继续添加图片 -->
     </div>
+
+    <a href="index.html" class="back-link">返回产品展示页面</a>
+  </div>
 </body>
 </html>
+
 
 
