--- a/雁翎刀.html
+++ b/雁翎刀.html
@@ -1,93 +1,163 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>雁翎刀 -- 预览版 - 详情</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .product-title {
-            font-size: 32px;
-            margin-bottom: 20px;
-            color: #333;
-        }
-        .product-description {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #555;
-            margin-bottom: 20px;
-        }
-        .price {
-            font-weight: bold;
-            color: #e67e22;
-        }
-        .image-gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        .image-gallery a {
-            display: block;
-            width: 48%; /* 确保每行两张图片 */
-            max-width: 200px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .image-gallery img {
-            width: 100%;
-            height: auto; /* 保证图片按比例缩放 */
-            border-radius: 8px;
-        }
-        .back-link {
-            display: inline-block;
-            margin-top: 20px;
-            color: #3498db;
-            text-decoration: none;
-        }
-        .back-link:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>雁翎刀 -- 预览版 - 详情</title>
+  <!-- 引入古典字体 -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Libre+Baskerville&display=swap"
+    rel="stylesheet"
+  />
+  <style>
+    /* 重置样式 */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    /* 页面背景与基础样式 */
+    body {
+      font-family: 'Libre Baskerville', serif;
+      background: url('https://www.transparenttextures.com/patterns/old-mathematics.png');
+      background-color: #f4f1e9;
+      color: #2c2c2c;
+      line-height: 1.6;
+      padding: 20px;
+    }
+    /* 页面头部 */
+    .header {
+      text-align: center;
+      padding: 30px 0;
+      background: #d7ccc8;
+      border-bottom: 4px solid #a67c52;
+      margin-bottom: 20px;
+    }
+    .header h1 {
+      font-family: 'Cinzel', serif;
+      font-size: 48px;
+      color: #3e2723;
+      margin-bottom: 10px;
+    }
+    .header p {
+      font-size: 20px;
+      color: #5d4037;
+    }
+    /* 详情容器 */
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 25px;
+      border: 2px solid #a67c52;
+      border-radius: 10px;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    }
+    .product-title {
+      font-family: 'Cinzel', serif;
+      font-size: 36px;
+      margin-bottom: 20px;
+      color: #3e2723;
+      text-align: center;
+      text-transform: uppercase;
+    }
+    .product-description {
+      font-size: 18px;
+      line-height: 1.8;
+      color: #5d4037;
+      margin-bottom: 20px;
+      text-align: justify;
+    }
+    .price {
+      font-weight: bold;
+      color: #bf360c;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    /* 图片画廊：使用网格布局统一图片尺寸 */
+    .image-gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 15px;
+      margin-top: 20px;
+      justify-items: center; /* 让每个网格中的内容居中 */
+    }
+    /* 每个网格项固定宽度，高度由 aspect-ratio 决定（需要现代浏览器支持） */
+    .image-gallery a {
+      width: 100%;
+      aspect-ratio: 1 / 1; /* 将图片区域设为正方形，可根据需要改为 4/3、16/9 等 */
+      border-radius: 8px;
+      overflow: hidden;
+      border: 1px solid #a67c52;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+      display: block;
+      position: relative; /* 为对象定位做准备 */
+    }
+    .image-gallery a:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    .image-gallery img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* 图片自动裁剪，填满容器 */
+      display: block;
+    }
+    /* 返回链接 */
+    .back-link {
+      display: inline-block;
+      margin-top: 25px;
+      color: #bf360c;
+      text-decoration: none;
+      font-size: 18px;
+      border: 1px solid #bf360c;
+      padding: 8px 16px;
+      border-radius: 4px;
+      transition: background-color 0.3s, color 0.3s;
+    }
+    .back-link:hover {
+      background-color: #bf360c;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="product-title">雁翎刀 design from 小林</h1>
-        <p class="product-description">本款雁翎刀为参考古董以及群友讨论最终定下的款式，目前正在进行材料设计中，仅展示渲染图与模型。</p>
-        <p class="product-description">具体参数正在进行修改中，预计控制在90cm，750g附近。</p>
-        <p class="product-description price">价格：¥1?00.00</p>
+  <!-- 页面头部 -->
+  <div class="header">
+    <h1>Strike Blade</h1>
+    <p>复原中世纪冷兵器的匠心之作</p>
+  </div>
 
-        <!-- 图片画廊 -->
-        <div class="image-gallery">
-            <a href="./雁龄刀素材/雁龄刀1.png" target="_blank">
-                <img src="./雁龄刀素材/雁龄刀1.png" alt="雁龄刀1">
-            </a>
-            <a href="./雁龄刀素材/雁龄刀2.png" target="_blank">
-                <img src="./雁龄刀素材/雁龄刀2.png" alt="雁龄刀2">
-            </a>
-            <a href="./雁龄刀素材/雁龄刀模型1.png" target="_blank">
-                <img src="./雁龄刀素材/雁龄刀模型1.png" alt="雁龄刀模型1">
-            </a>
-            <a href="./雁龄刀素材/雁龄刀模型2.png" target="_blank">
-                <img src="./雁龄刀素材/雁龄刀模型2.png" alt="雁龄刀模型2">
-            </a>
-        </div>
+  <div class="container">
+    <h1 class="product-title">雁翎刀 design from 小林</h1>
+    <p class="product-description">
+      本款雁翎刀为参考古董以及群友讨论最终定下的款式，目前正在进行材料设计中，仅展示渲染图与模型。
+    </p>
+    <p class="product-description">
+      具体参数正在进行修改中，预计控制在90cm，750g附近。
+    </p>
+    <p class="product-description price">价格：¥1?00.00</p>
 
-        <a href="index.html" class="back-link">返回产品展示页面</a>
+    <!-- 图片画廊：统一图片尺寸 -->
+    <div class="image-gallery">
+      <a href="./雁龄刀素材/雁龄刀1.png" target="_blank">
+        <img src="./雁龄刀素材/雁龄刀1.png" alt="雁龄刀1" />
+      </a>
+      <a href="./雁龄刀素材/雁龄刀2.png" target="_blank">
+        <img src="./雁龄刀素材/雁龄刀2.png" alt="雁龄刀2" />
+      </a>
+      <a href="./雁龄刀素材/雁龄刀模型1.png" target="_blank">
+        <img src="./雁龄刀素材/雁龄刀模型1.png" alt="雁龄刀模型1" />
+      </a>
+      <a href="./雁龄刀素材/雁龄刀模型2.png" target="_blank">
+        <img src="./雁龄刀素材/雁龄刀模型2.png" alt="雁龄刀模型2" />
+      </a>
+      <!-- 如果有更多图片，继续添加 -->
     </div>
+
+    <a href="index.html" class="back-link">返回产品展示页面</a>
+  </div>
 </body>
 </html>
 
