--- a/1796.html
+++ b/1796.html
@@ -145,7 +145,7 @@
       <!-- 继续添加图片 -->
     </div>
 
-    <a href="index.html" class="back-link">返回产品展示页面</a>
+    <a href="products.html" class="back-link">返回产品展示页面</a>
   </div>
 </body>
 </html>
