--- a/钩子号.html
+++ b/钩子号.html
@@ -138,7 +138,7 @@
       </a>
     </div>
 
-    <a href="index.html" class="back-link">返回产品展示页面</a>
+    <a href="products.html" class="back-link">返回产品展示页面</a>
   </div>
 </body>
 </html>
