--- a/雁翎刀.html
+++ b/雁翎刀.html
@@ -156,7 +156,7 @@
       <!-- 如果有更多图片，继续添加 -->
     </div>
 
-    <a href="index.html" class="back-link">返回产品展示页面</a>
+    <a href="products.html" class="back-link">返回产品展示页面</a>
   </div>
 </body>
 </html>
