--- a/侧剑.html
+++ b/侧剑.html
@@ -152,7 +152,7 @@
       <!-- 如果有更多图片，可以继续添加 -->
     </div>
 
-    <a href="index.html" class="back-link">返回产品展示页面</a>
+    <a href="products.html" class="back-link">返回产品展示页面</a>
   </div>
 </body>
 </html>
