新增车丘嘉产品

--- a/products.html
+++ b/products.html
@@ -30,6 +30,19 @@
 
     <!-- 第一个产品 -->
     <div class="product">
+      <a href="车丘嘉.html" class="product-link">
+        <div class="product-info">
+          <h2>车丘嘉--突厥式战刀最后的残阳</h2>
+          <p>感谢复刻砖家与三花猫的鼎立支持，感谢小林设计师的辛勤付出</p>
+          <div class="price">价格请进入详情页面查询</div>
+        </div>
+        <!-- 示例图片，需根据你的路径进行修改 -->
+        <img src="./车丘嘉素材/车丘加3.jpg" alt="cqj预览图" class="product-preview">
+      </a>
+    </div>
+
+    <!-- 第一个产品 -->
+    <div class="product">
       <a href="1796.html" class="product-link">
         <div class="product-info">
           <h2>1796轻骑兵军刀</h2>
