--- a/1845步兵.html
+++ b/1845步兵.html
@@ -127,7 +127,9 @@
       p1845英式军刀乃是英国维多利亚时代最具有代表性的军刀，其独特的刀条设计影响到了整个欧洲的军刀设计，是英式军刀中的经典之作。此型号的特点为茅尖宽槽的刀条，由威尔金森公司于1845年定型，和他的前辈1822式步兵军刀相比刀身更加牢固，从而更加不容易在战斗中折断。
     </p>
     <p class="product-description">
-        随着火器的发展，步兵军刀作为军官的主战武器的地位逐渐让步于手枪，但是在许多殖民地战争中，军官们发现一些悍勇的原住民并不会因为枪炮而丧失斗志，甚至会勇敢的向着拥有先进火器的英国军队冲锋。频繁的白刃战使得佩戴一把可靠刀剑的需求上升了。同时，由于此时英国国力强盛，工业水平发达，1845式军刀成为了一种美观与实用性完美兼备的武器。
+        随着火器的发展，步兵军刀作为军官的主战武器的地位逐渐让步于手枪，但是在许多殖民地战争中，军官们发现一些悍勇的原住民并不会因为枪炮而丧失斗志，甚至会勇敢的向着拥有先进火器的英国军队冲锋。
+        频繁的白刃战使得佩戴一把可靠刀剑的需求上升了。得益于于此时英国国力强盛，工业水平发达，1845军刀作为一种美观与实用性完美兼备的武器应运而生。
+ 
     <p class="product-description">
       此次复刻的版本为1854年的一体护手版本，相较于1845年可折叠护手的设计，取消了机械式结构的设计使得其耐用程度大幅提升，此版本在战斗中更加可靠。
     </p>
