--- a/1845步兵.html
+++ b/1845步兵.html
@@ -141,7 +141,7 @@
     </p>蚀刻+120/升级铜鞘+150/鞘内加装木胎+150
     </p>
 
-    <p class="price">价格：¥1550.00标准版</p>
+    <p class="price">价格：¥1550.00标准版首发价（默认铁鞘）</p>
 
     <!-- 图片画廊 -->
     <div class="image-gallery">
