--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </p>
       <h2>关于创始人</h2>
       <p class="intro-description">
-        我们的创始人兼老板是一位历史爱好者，致力于为历史复原冷兵器爱好者提供高品质的产品。他亲自监督每件武器的制作过程，确保每一件都是艺术品。
+        我们的创始人兼老板是一位历史爱好者，致力于为历史复原冷兵器爱好者提供高品质的产品。他亲自监督每件武器的制作过程，确保每一件都是艺术品。如有需要请直接联系德子
       </p>
       <h2>联系方式</h2>
       <p class="intro-description">
