--- a/bulletin.html
+++ b/bulletin.html
@@ -36,11 +36,7 @@
   <details>
     <summary>了解详情</summary>
     <p>
-      目前车丘嘉已经完成了所有设计，等待报价后开始开团，开团期限为5天，过期不候~<br>
-      1796骑兵刀即将交付，目前正在进行最后的柄木制造。<br>
-      匈牙利马刀，1845英式军刀将会在1796交付后进行开团。<br>
-      侧剑已完成打样，等待开团。<br>
-      雁翎刀静候小林完成模型与估价。
+      车丘嘉与1845步兵军刀已开团，目前由德子进行收款确认中！有需求请询问德子！！！接下来等待1796交付完成后，会有更多开团，敬请期待。
     </p>
   </details>
 </div>
