--- a/bulletin.html
+++ b/bulletin.html
@@ -32,7 +32,7 @@
     
 <div class="announcement">
   <h2>最新产品研发进展</h2>
-  <p>车丘嘉设计完成，准备进行打样与预售，敬请期待...</p>
+  <p>1845与车丘嘉已开团...</p>
   <details>
     <summary>了解详情</summary>
     <p>
