--- a/1845步兵.html
+++ b/1845步兵.html
@@ -137,7 +137,7 @@
       全长约95cm，重约750g，刃长82cm，最厚处7mm左右，史实渐薄设计，尽可能复刻军刀中的经典之作。
     </p>
     <p class="product-description">
-      默认材料为60sicrva，气锤锻造，人工修型，非土炉热处理，油淬，预计硬度56HRC~57HRC。
+      默认材料为60si2crva，气锤锻造，人工修型，非土炉热处理，油淬，预计硬度56HRC~57HRC。
     </p>
     <p class="product-description">
       可替换材料为S7，综合性能优异，抗锈更佳。
