--- a/bulletin.html
+++ b/bulletin.html
@@ -32,11 +32,26 @@
     
 <div class="announcement">
   <h2>最新产品研发进展</h2>
-  <p>1845与车丘嘉已开团...</p>
+  <p>车丘嘉进度更新...</p>
   <details>
     <summary>了解详情</summary>
     <p>
-      车丘嘉与1845步兵军刀已开团，目前由德子进行收款确认中！有需求请询问德子！！！接下来等待1796交付完成后，会有更多开团，敬请期待。
+      车丘嘉已完成装具打样，调整与刀条锻造完成后将开始进行组装。
+      <!-- 图片画廊 -->
+      <div class="image-gallery">
+        <a href="./车丘嘉素材/车丘嘉装具0.jpg" target="_blank">
+          <img src="./车丘嘉素材/车丘嘉装具0.jpg" alt="1">
+        </a>
+        <a href="./车丘嘉素材/车丘嘉装具1.jpg" target="_blank">
+          <img src="./车丘嘉素材/车丘嘉装具1.jpg" alt="2">
+        </a>
+        <!-- 继续添加图片 -->
+        <a href="./车丘嘉素材/车丘嘉装具2.jpg" target="_blank">
+          <img src="./车丘嘉素材/车丘嘉装具2.jpg" alt="3">
+        </a>
+      </div>
+    
+
     </p>
   </details>
 </div>
