--- a/钩子号.html
+++ b/钩子号.html
@@ -124,20 +124,43 @@
   <div class="container">
     <h1 class="product-title">钩子号水兵刀</h1>
     <p class="product-description">
-      这款水兵刀剑采用S7先进钢材进行制造，完美体现了18、19世纪大英航海的风骨。旨在让历史爱好者和武器收藏家体验到钩子号船长与他忠实船员的真实魅力。
+      这款水兵刀剑采用S7先进钢材进行制造，完美体现了18、19世纪大英航海的风骨。旨在让历史爱好者和武器收藏家体验到钩子号船长与他忠实船员的真实魅力。刀尖强而有力
+      剑身工艺也极其精美，刀柄采用真鱼皮配合手工金属缠丝制作，满足对细节的极致追求
     </p>
     <p class="product-description">
-      全长70cm，重约750g，设计灵感来源于尊贵的钩子船长，向他致敬🫡。
+      全长70cm，重约700g，手感极其轻盈。设计灵感来源于尊贵的钩子船长，向他致敬🫡。
     </p>
     <p class="price">价格：¥950.00</p>
 
     <!-- 图片画廊 -->
-    <div class="image-gallery">
-      <a href="./钩子号素材/钩子.png" target="_blank">
-        <img src="./钩子号素材/钩子.png" alt="钩子号1">
-      </a>
-    </div>
+<div class="image-gallery">
+  <!-- 第一张大图 -->
+  <a href="./钩子号素材/钩子.png" target="_blank" class="large-image">
+    <img src="./钩子号素材/钩子.png" alt="钩子号1">
+  </a>
 
+  <!-- 以下是排列在第二行的小图（最多6张，注意我们删除了钩子7.png） -->
+  <a href="./钩子号素材/钩子1.png" target="_blank">
+    <img src="./钩子号素材/钩子1.png" alt="钩子号2">
+  </a>
+  <a href="./钩子号素材/钩子2.png" target="_blank">
+    <img src="./钩子号素材/钩子2.png" alt="钩子号3">
+  </a>
+  <a href="./钩子号素材/钩子3.png" target="_blank">
+    <img src="./钩子号素材/钩子3.png" alt="钩子号4">
+  </a>
+  <a href="./钩子号素材/钩子4.png" target="_blank">
+    <img src="./钩子号素材/钩子4.png" alt="钩子号5">
+  </a>
+  <a href="./钩子号素材/钩子5.png" target="_blank">
+    <img src="./钩子号素材/钩子5.png" alt="钩子号6">
+  </a>
+  <a href="./钩子号素材/钩子6.png" target="_blank">
+    <img src="./钩子号素材/钩子6.png" alt="钩子号7">
+  </a>
+</div>
+
+      
     <a href="products.html" class="back-link">返回产品展示页面</a>
   </div>
 </body>
