--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
       <a href="index.html">首页</a>
       <a href="products.html" class="active">产品展示</a>
       <a href="articles.html">刀剑研究文章</a>
-      <a href="bulletin.html">公告</a>
+      <a href="bulletin.html">客户须知</a>
     </nav>
   </div>
 
