--- a/bulletin.html
+++ b/bulletin.html
@@ -85,10 +85,10 @@
             <li><strong>Q:</strong> 如何保养？<br><strong>A:</strong> 请涂油，如果长期不玩，或者地区气候湿润，请涂油和使用保鲜膜包裹。</li>
             <li><strong>Q:</strong> 为什么我感觉你们这砍起来没有xxx那么厉害啊？是不是你们在诓我？<br><strong>A:</strong> 如果在技术没有问题的情况下，可以试试优化开刃情况，我们会出教程，另外不同的设计斩切效果是不一样的，如果希望学习具体切割技术我们未来会出教程</li>
             <li><strong>Q:</strong> 剑身数据如何？<br><strong>A:</strong> 大部分剑参考古物设计，极致的渐薄和丰美的轮廓让她可以轻盈而又可以迅速而有力的执行斩切，刺击，啄击等战术动作，钢质鞘身薄而贴身，让佩戴时的重量也不会成为过度的负担</li>
-            <li><strong>Q:</strong> 这把剑的价格有点贵，我感觉不太能负担的起怎么办？<br><strong>A:</strong> 非常抱歉，由于整把剑都需要全新规格制作的成本（装具开模和刀条设计和全新规格铁鞘），这支剑的成本实在是很难压下来，但我们也保证，这把经过精修检查后的刀剑绝对是市场上目前绝无仅有而物超所值的</li>
+            <li><strong>Q:</strong> 这把剑的价格有点贵，我感觉不太能负担的起怎么办？<br><strong>A:</strong> 非常抱歉，由于整把剑都需要全新规格制作的成本（装具开模和刀条设计和全新规格铁鞘），这支剑的成本实在是很难压下来，但我们也保证，这把经过精修检查后的刀剑绝对是市场上目前绝无仅有而物超所值的。</li>
           </ul>
 
-          <p><strong>特别声明：</strong>我们生产的产品为仿古工艺品以及训练器材，凡阅读后如有违规行为与我方无关，属个人行为。</p>
+          <p><strong>特别声明：</strong>我们生产的产品为仿古工艺品以及训练器材，凡阅读后如有违规行为与我方无关，属个人行为。所有新产品将会有为期一周的首发优惠。</p>
           <p>如有合作信息请发邮箱。联系方式验证信息为“我已全部阅读萨兰工艺品/StrikeBlade的各项条款并确认。”</p>
         </div>
       </details>
